// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PR opened use-case Should add bookmark and invite author and reviewers on PR opened 1`] = `
{
  "addedBookmarks": [
    {
      "emoji": ":git:",
      "link": "https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview",
      "title": "Review Pull Request",
    },
  ],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "type": "divider",
        },
        {
          "elements": [
            {
              "text": "Test pull request description",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "type": "divider",
        },
        {
          "text": {
            "text": "Please <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|review the PR>",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "text": "Test Author opened <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|pull request>",
    },
  ],
  "topicUpdates": [
    "Test pull request title",
  ],
}
`;

exports[`PR opened use-case Should send notification to the broadcast channel, if it is specified 1`] = `
{
  "addedBookmarks": [],
  "addedReactions": [],
  "closeChannelCalls": [],
  "deleteMessageCalls": [],
  "invitesToChannels": [],
  "kicksFromChannels": [],
  "searchedCommentSnapshots": [],
  "searchedPrOpenedBroadcastMessages": [],
  "sentMessages": [
    {
      "blocks": [
        {
          "text": {
            "text": ":snowboarder: Test Author opened pull request "Test pull request title".",
            "type": "mrkdwn",
          },
          "type": "section",
        },
        {
          "elements": [
            {
              "text": "Target: \`test-repository/main\`",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "elements": [
            {
              "text": "Assigned reviewers: Test Reviewer 1,Test Reviewer 2.",
              "type": "mrkdwn",
            },
          ],
          "type": "context",
        },
        {
          "text": {
            "text": "You're welcome to <https://git.test.com/projects/TEST-PROJ/repos/test-repository/pull-requests/1/overview|join code review>.",
            "type": "mrkdwn",
          },
          "type": "section",
        },
      ],
      "metadata": {
        "eventPayload": {
          "projectKey": "TEST-PROJ",
          "pullRequestId": "1",
          "repositorySlug": "test-repository",
        },
        "eventType": "pull_request_opened",
      },
      "text": ":snowboarder: Test Author opened pull request "Test pull request title".",
    },
  ],
  "topicUpdates": [],
}
`;
